// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-1ol0zd8-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  color: #4a4f62;
  background: none;
}

.cache-1ol0zd8-StyledItem svg {
  fill: #4a4f62;
}

.cache-1ol0zd8-StyledItem:hover,
.cache-1ol0zd8-StyledItem:focus {
  color: #4a4f62;
}

.cache-1ol0zd8-StyledItem:hover svg,
.cache-1ol0zd8-StyledItem:focus svg {
  fill: #4a4f62;
}

<button
    class="cache-1ol0zd8-StyledItem epxin6a1"
    role="menuitem"
    type="button"
  >
    Borderless Props
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-13wcph2-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  min-width: 110px;
  color: #4a4f62;
  background: none;
}

.cache-13wcph2-StyledItem svg {
  fill: #4a4f62;
}

.cache-13wcph2-StyledItem:hover,
.cache-13wcph2-StyledItem:focus {
  color: #4a4f62;
}

.cache-13wcph2-StyledItem:hover svg,
.cache-13wcph2-StyledItem:focus svg {
  fill: #4a4f62;
}

<button
    class="cache-13wcph2-StyledItem epxin6a1"
    role="menuitem"
    type="button"
  >
    Default Props
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-1rmr08u-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  min-width: 110px;
  color: #c4c9d6;
  cursor: not-allowed;
  background: none;
}

.cache-1rmr08u-StyledItem svg {
  fill: #c4c9d6;
}

<button
    class="cache-1rmr08u-StyledItem epxin6a1"
    disabled=""
    role="menuitem"
    type="button"
  >
    Disabled Props
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant danger 1`] = `
<DocumentFragment>
  .cache-1rspo64-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  min-width: 110px;
  color: #a6102d;
  background: none;
}

.cache-1rspo64-StyledItem svg {
  fill: #a6102d;
}

.cache-1rspo64-StyledItem:hover,
.cache-1rspo64-StyledItem:focus {
  color: #a6102d;
}

.cache-1rspo64-StyledItem:hover svg,
.cache-1rspo64-StyledItem:focus svg {
  fill: #a6102d;
}

<button
    class="cache-1rspo64-StyledItem epxin6a1"
    role="menuitem"
    type="button"
  >
    Danger
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu placement renders "top-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-13wcph2-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  min-width: 110px;
  color: #4a4f62;
  background: none;
}

.cache-13wcph2-StyledItem svg {
  fill: #4a4f62;
}

.cache-13wcph2-StyledItem:hover,
.cache-13wcph2-StyledItem:focus {
  color: #4a4f62;
}

.cache-13wcph2-StyledItem:hover svg,
.cache-13wcph2-StyledItem:focus svg {
  fill: #4a4f62;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          class="cache-13wcph2-StyledItem epxin6a1"
          role="menuitem"
          type="button"
        >
          Menu.Item
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-1rmr08u-StyledItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #e6e9f0;
  cursor: pointer;
  min-width: 110px;
  color: #c4c9d6;
  cursor: not-allowed;
  background: none;
}

.cache-1rmr08u-StyledItem svg {
  fill: #c4c9d6;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu-1"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <button
          class="cache-1rmr08u-StyledItem epxin6a1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Menu.Item disabled
        </button>
        <button
          class="cache-1rmr08u-StyledItem epxin6a1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Menu.Item Link disabled
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4a4f62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0px 0px 24px 6px #D4DAE766;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after {
  border-color: transparent;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border-color: transparent;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after,
.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  bottom: 100%;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:after {
  border-bottom-color: #ffffff;
}

.cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom:before {
  border-bottom-color: transparent;
}

.cache-15mzmmw-StyledLinkItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  cursor: pointer;
  min-width: 110px;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15mzmmw-StyledLinkItem svg {
  fill: #4a4f62;
}

.cache-15mzmmw-StyledLinkItem:hover,
.cache-15mzmmw-StyledLinkItem:focus {
  color: #4a4f62;
}

.cache-15mzmmw-StyledLinkItem:hover svg,
.cache-15mzmmw-StyledLinkItem:focus svg {
  fill: #4a4f62;
}

.cache-15mzmmw-StyledLinkItem:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      id="menu-1"
      role="dialog"
      style="position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    >
      <div
        class="cache-19xctvw-MenuList-centerStyles-bottomStyles-bottom epli4kt0"
        role="menu"
      >
        <a
          class="cache-15mzmmw-StyledLinkItem epxin6a0"
          href="/link"
          role="menuitem"
        >
          Menu.Item as Link
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with disclosure not a function 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-16wxqto-StyledPopover {
  border-radius: 4px;
  background-color: #ffffff;
  color: #4a4f62;
  box-shadow: 0px 4px 24px 6px #D4DAE766;
}

<div
    class="__reakit-portal"
  >
    <div
      aria-label="Menu"
      class="cache-16wxqto-StyledPopover epli4kt1"
      data-dialog="true"
      hidden=""
      id="menu"
      role="dialog"
      style="display: none; position: fixed; left: 100%; top: 100%;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
